TECH-XXXX - fix gap between border and roundel

--- a/src/src/components/Recipe/Chef/Chef.css
+++ b/src/src/components/Recipe/Chef/Chef.css
@@ -12,5 +12,6 @@
 .chef :local img {
 	height: 100%;
 	border: chefImageBorderWidth solid white;
+	background-color: white;
 	border-radius: 50%;
 }
